--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,44 @@
 {
   "name": "netivo/wc-preorder",
-  "description": "WooCommerce Preorder product for WordPress",
+  "description": "Netivo Module for WooCommerce to add preorder option to products",
   "minimum-stability": "stable",
   "license": "proprietary",
-  "version": "1.0.0",
+  "version": "1.0",
+  "authors": [
+    {
+      "name": "netivo",
+      "email": "biuro@netivo.pl"
+    },
+    {
+      "name": "Mikołaj Stankiewicz",
+      "email": "mikolaj.stankiewicz@netivo.pl"
+    }
+  ],
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://packagist.netivo.pl"
+    }
+  ],
   "require": {
-    "php": ">=8.1",
-    "automattic/woocommerce": "^3.0"
+    "php": ">=8.2"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^10.0"
   },
   "autoload": {
     "psr-4": {
       "Netivo\\Module\\WooCommerce\\ProductPreorder\\": "src/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Netivo\\Module\\WooCommerce\\ProductPreorder\\Test\\": "tests/"
+    }
+  },
+  "scripts": {
+    "test": [
+      "@php -d zend.enable_gc=0 vendor/bin/phpunit"
+    ]
   }
 }
