--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "netivo/wc-preorder",
   "description": "Netivo Module for WooCommerce to add preorder option to products",
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "license": "proprietary",
   "version": "1.1",
   "authors": [
